[package]
name = "copic_colors"
version = "0.1.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Copic color list"
homepage = "https://github.com/sile/copic_colors"
repository = "https://github.com/sile/copic_colors"
readme = "README.md"
categories = ["no-std"]

[dependencies]
